feat: Add Proxy Rule list screen
- Add a button to see applied proxy rules in NetworkEntryDetailsActivity
- Create a new screen ProxyListRulesActivity to show a list of proxy rules.
- Extract adapter and dialog files into a new `dialog` package.
- Fix ProxyActionItemDecorator drawing issue when there's only one item.
- Improve ProxyCreateRuleActivity and ProxyListRulesFragment viewmodel separation.
- Rename ProxyViewModel to ProxyCreateRuleViewModel and ProxyActivity to ProxyCreateRuleActivity.
- Rename ProxyFragment to ProxyListRulesFragment and update _utils.kt.
- Add getRules and getRuleById methods to ProxyDao.
- Rename deleteRule, deleteAction, and deleteActions to deleteRuleById, deleteActionById, and deleteActionsByRuleId respectively.
- Update updateEnabled to updateEnabledById in ProxyDao.
- Add portuguese strings for proxy rules applied and see rules button.
- Add androidx fragment ktx dependency.

--- a/content/network/src/main/res/layout/bigbrother_activity_network_entry.xml
+++ b/content/network/src/main/res/layout/bigbrother_activity_network_entry.xml
@@ -78,6 +78,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/net_entry_details_general_info" />
 
+    <LinearLayout
+        android:id="@+id/net_entry_details_proxy_container"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/bb_background_secondary"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/net_entry_details_background">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingHorizontal="10dp"
+            android:text="@string/net_entry_details_proxy_rules" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/net_entry_details_proxy_rules"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/net_entry_details_proxy_button"
+            android:textColor="@color/bb_text_hyperlink"
+            android:textSize="11sp" />
+
+    </LinearLayout>
+
     <WebView
         android:id="@+id/net_entry_details_web"
         android:layout_width="0dp"
@@ -85,7 +114,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/net_entry_details_background" />
+        app:layout_constraintTop_toBottomOf="@id/net_entry_details_proxy_container" />
 
     <FrameLayout
         android:id="@+id/net_entry_details_loading_container"
