--- a/content/network/src/main/res/xml/bigbrother_activity_network_entry_scene.xml
+++ b/content/network/src/main/res/xml/bigbrother_activity_network_entry_scene.xml
@@ -28,9 +28,26 @@
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toBottomOf="@id/net_entry_details_toolbar"
             motion:visibilityMode="ignore" />
+
+        <Constraint
+            android:id="@id/net_entry_details_proxy_container"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toBottomOf="@id/net_entry_details_background"
+            motion:visibilityMode="ignore"/>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
+        <Constraint
+            android:id="@id/net_entry_details_proxy_container"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toBottomOf="@id/net_entry_details_background"
+            motion:visibilityMode="ignore"/>
         <Constraint
             android:id="@+id/net_entry_details_status_code"
             android:layout_width="wrap_content"
