--- a/content/proxy/src/main/res/values-pt/bigbrother_strings.xml
+++ b/content/proxy/src/main/res/values-pt/bigbrother_strings.xml
@@ -48,4 +48,9 @@
     <string name="proxy_actions_do_nothing">Nenhuma ação adicionada</string>
     <string name="proxy_list_rules_enable_all">Habilitar todas as regras</string>
     <string name="proxy_list_rules_disable_all">Desabilitar todas as regras</string>
+    <string name="proxy_list_rules_title">Regras aplicadas</string>
+    <string name="proxy_menu_create_rule">Criar nova regra</string>
+    <string name="proxy_menu_import_rule">Importar regras</string>
+    <string name="proxy_menu_export_rule">Exportar regras</string>
+    <string name="proxy_export_copy">Copiar</string>
 </resources>
