--- a/content/common/src/main/res/values/bigbrother_strings.xml
+++ b/content/common/src/main/res/values/bigbrother_strings.xml
@@ -12,4 +12,5 @@
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="add">Add</string>
+    <string name="ok">Ok</string>
 </resources>
