--- a/content/proxy/src/main/res/layout/bigbrother_dialog_actions.xml
+++ b/content/proxy/src/main/res/layout/bigbrother_dialog_actions.xml
@@ -53,7 +53,9 @@
             android:id="@+id/proxy_action_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/proxy_add_action_name_hint" />
+            android:hint="@string/proxy_add_action_name_hint"
+            android:imeOptions="actionNext"
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,7 +73,9 @@
             android:id="@+id/proxy_action_value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/proxy_add_action_value_hint" />
+            android:hint="@string/proxy_add_action_value_hint"
+            android:imeOptions="actionDone"
+            android:singleLine="true"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -91,6 +95,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/proxy_add_action_body_hint"
+            android:imeOptions="actionDone"
             android:inputType="textMultiLine"
             android:maxLines="10"
             android:scrollHorizontally="true"
