rename bb resources

--- a/content/crash/src/main/res/layout/bigbrother_activity_crash.xml
+++ b/content/crash/src/main/res/layout/bigbrother_activity_crash.xml
@@ -108,7 +108,7 @@
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:maxLines="1"
-        android:text="@string/crash_title"
+        android:text="@string/bigbrother_crash_title"
         android:textColor="@color/bb_text_title"
         app:layout_constraintBottom_toBottomOf="@id/close_img_avd"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="@string/crash_screen"
+        android:text="@string/bigbrother_crash_screen"
         android:textColor="@color/bb_text_title"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/crash_screen_name"
