--- a/content/crash/src/main/res/values-pt/bigbrother_strings.xml
+++ b/content/crash/src/main/res/values-pt/bigbrother_strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="crash_title">O App crashou :(</string>
-    <string name="crash_screen">Na tela:</string>
+    <string name="bigbrother_crash_title">O App crashou :(</string>
+    <string name="bigbrother_crash_screen">Na tela:</string>
 </resources>
