--- a/content/proxy/src/main/res/values/bigbrother_strings.xml
+++ b/content/proxy/src/main/res/values/bigbrother_strings.xml
@@ -1,31 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="bigbrother_proxy_empty_label" translatable="false"></string>
-    <string name="bigbrother_proxy_set_body_label" translatable="false">SET BODY</string>
+    <string name="bigbrother_proxy_set_body_label" translatable="false">SET BODY REQUEST</string>
+    <string name="bigbrother_proxy_set_body_response_label" translatable="false">SET BODY RESPONSE</string>
     <string name="bigbrother_proxy_set_path_label" translatable="false">SET PATH</string>
     <string name="bigbrother_proxy_set_header_label" translatable="false">SET HEADER</string>
     <string name="bigbrother_proxy_set_method_label" translatable="false">SET METHOD</string>
+    <string name="bigbrother_proxy_set_response_label" translatable="false">SET RESPONSE CODE</string>
     <string name="bigbrother_proxy_remove_header_label" translatable="false">REMOVE HEADER</string>
     <string name="bigbrother_proxy_set_query_label" translatable="false">SET QUERY</string>
+    <string name="bigbrother_proxy_set_response_code_label" translatable="false">SET RESPONSE CODE</string>
     <string name="bigbrother_proxy_remove_query_label" translatable="false">REMOVE QUERY</string>
 
     <string name="bigbrother_proxy_empty_message">Select an option into dropdown to continue</string>
     <string name="bigbrother_proxy_set_body_message">To edit the body before the request is executed</string>
+    <string name="bigbrother_proxy_set_body_response_message">To edit the body response</string>
     <string name="bigbrother_proxy_set_path_message">To edit the endpoint before the request is executed</string>
     <string name="bigbrother_proxy_set_header_message">To add or edit a header before the request is executed</string>
     <string name="bigbrother_proxy_set_method_message">To change request method</string>
     <string name="bigbrother_proxy_remove_header_message">To remove a header before the request is executed</string>
     <string name="bigbrother_proxy_set_query_message">To add or edit a queryString before the request is executed</string>
+    <string name="bigbrother_proxy_set_response_code_message">To change response code</string>
     <string name="bigbrother_proxy_remove_query_message">To remove a queryString before the request is executed</string>
 
     <string name="bigbrother_proxy_set_header_description">Adds or edits the \"%s\" header with the value \"%s\"</string>
     <string name="bigbrother_proxy_set_method_description">Changes the request method to %s\"%2s\"</string>
     <string name="bigbrother_proxy_set_path_description">Changes the request path to %s\"%2s\"</string>
     <string name="bigbrother_proxy_set_body_description">Replaces the request body</string>
+    <string name="bigbrother_proxy_set_body_response_description">Replaces the response body</string>
     <string name="bigbrother_proxy_set_query_description">Adds or edits the \"%s\" queryString with the value \"%s\"</string>
+    <string name="bigbrother_proxy_set_response_code_description">Replaces the response code to %s\"%2s\"</string>
     <string name="bigbrother_proxy_remove_header_description">Removes the \"%s\" header</string>
     <string name="bigbrother_proxy_remove_query_description">Removes the \"%s\" queryString</string>
 
+    <string name="bigbrother_proxy_number_field">The field must be a number</string>
     <string name="bigbrother_proxy_required_field">Required field</string>
     <string name="bigbrother_proxy_json_invalid">Invalid format\n%1$s</string>
     <string name="bigbrother_proxy_spaces_error">This field cannot contain spaces</string>
