feat: Improve network details view
This commit enhances the network details view by:

- Adding support for rendering HTML, Multipart, and image responses directly within the view.
- Improving the handling and display of request/response bodies and headers.
- Adding Kotlin serialization for better data handling.
- Implementing `toReadable` and `toHtml` extension functions for Maps.
- Including an "Upload Image" and "XML API" example in the sample app.
- Adding an example image to assets for the upload example.
- Minor UI adjustments and code refactoring in `NetworkEntryDetailsActivity` and related classes.

--- a/app/src/main/res/layout/network_activity.xml
+++ b/app/src/main/res/layout/network_activity.xml
@@ -58,10 +58,34 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="20dp"
             android:text="@string/error_load_list"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/slow_load_list" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/upload_img"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="20dp"
+            android:text="@string/upload_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/error_load_list" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/xml_api"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="20dp"
+            android:text="XML API"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/upload_img" />
 
         <com.google.android.material.progressindicator.LinearProgressIndicator
             android:id="@+id/progress_bar"
