--- a/content/ui-automator/src/main/res/values/bigbrother_ids.xml
+++ b/content/ui-automator/src/main/res/values/bigbrother_ids.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <id name="bigbrother_click_observer"/>
+    <id name="bigbrother_ui_automator"/>
 </resources>
